- merged Activate and Inactivate column in admin user index - removed !important in css and replaced with class center_me - corrected shifts count

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,10 @@
  */
 @import "bootstrap";
 
-th {
-  text-align: center !important;
+.table th.center_me, td.center_me {
+  text-align: center;
 }
 
-td .btn {
-  display: block !important;
+.table td.center_me .btn {
+  display: block;
 }
